kinda fixed layout bugs

--- a/react-frontend/src/css/Alarms.css
+++ b/react-frontend/src/css/Alarms.css
@@ -5,7 +5,7 @@
 }
 
 .alarmLeftSidebar {
-  width: 25%;
+  width: 25vw;
   border-right: solid 0.22vw black;
   display: flex;
   flex-direction: column;
