--- a/react-frontend/src/css/HeatMap.css
+++ b/react-frontend/src/css/HeatMap.css
@@ -1,23 +1,24 @@
 .heatDiv {
   display: flex;
-  flex: 1;
   flex-direction: row;
+  flex: 1;
 }
 
 .heatLeftSidebar {
-  width: 25%;
+  width: 24.8vw; /*ingen aning om varför just detta funkar?? */
   border-right: solid 0.22vw black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .heatMapDiv {
   display: flex;
   flex-direction: row;
   flex: 1;
-  width: 100%;
-  height: 100%;
+  width: 30vw;
+  height: 85vh;
 }
 
 .heatMapTitle {
@@ -26,11 +27,6 @@
   color: #1a202c;
   opacity: 75%;
   font-size: 40px;
-}
-
-.floorPlanImage {
-  width: 100%;
-  height: 100%;
 }
 
 .heatMapButton {
@@ -54,10 +50,4 @@
   position: relative;
   width: 100%;
   height: 100%;
-}
-
-.floorpPlanDiv img {
-  width: 100%;
-  height: 100%;
-  object-fit: fill; /* Ensures the image stretches to fill the container */
 }
